added an about and our history section of the restaurant

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,10 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Gloock&display=swap");
     </style>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@500&display=swap");
+    </style>
+
     <title>Restaurant</title>
   </head>
   <body>
