--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@500&display=swap");
     </style>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Cormorant+Upright&display=swap");
+    </style>
 
     <title>Restaurant</title>
   </head>
